(ocamllex lexer)

(library
 (name grain_parsing)
 (public_name grain_parsing)
 (synopsis "Frontend modules for Grain compiler")
 (libraries
  compiler-libs.common
  grain_utils
  utf8.lib
  str
  ppx_deriving_yojson.runtime
  ppx_sexp_conv.runtime-lib
  sexplib
  yojson)
 (preprocess
  (pps ppx_sexp_conv ppx_deriving_yojson)))

(menhir
 (modules parser)
 (flags
  ("log-grammar" 1)))
